# libudevpp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  ci.sh  doxygen.conf
example/: CMakeLists.txt  Makefile  udevpp_example
example/src/: enumerate.cpp  main.cpp
lib/: CMakeLists.txt  Makefile
lib/include/udev/: udev.h
lib/src/: udev.cpp  udev.h  udev_device.cpp  udev_enumerate.cpp  udev_monitor.cpp  udevpp.h
test/: CMakeLists.txt  device_test.cpp  monitor_test.cpp
test/gtest-1.7.0/: CTestTestfile.cmake
